--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "instagramclone",
+  "name": "ExcersieApp",
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -7,11 +7,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CKubisa/InstagramClone.git"
+    "url": "git+https://github.com/CKubisa/ExcersieApp.git"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bulma-calendar": "^6.1.13",
+    "bulma-o-steps": "^1.1.0",
+    "bulma-slider": "^2.0.4",
     "express": "4.17.1",
     "lodash": "^4.17.21"
   },
