--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bulma": "^0.9.3",
+    "bulma-slider": "^2.0.4",
     "@fortawesome/fontawesome-free": "5.15.4",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
@@ -24,7 +25,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "bulma-slider": "^2.0.4",
+    "@fortawesome/fontawesome-free": "5.15.4"
   },
   "eslintConfig": {
     "root": true,
